# rust-blog

./: .gitignore  Cargo.toml  README.md
.github/: commit.md
blog/: Cargo.toml  Rocket.toml
blog/data/: index.html
blog/data/articles/: test.md
blog/data/articles/dir/: another_test.md
blog/data/misc/: about.md  contact.md
blog/data/static/: default.css  head.html
blog/data/template/: article.html
blog/src/: lib.rs  main.rs
doc/: 1-demand analysis.md
rust-blog/: Cargo.toml
rust-blog/src/: main.rs
src/: main.rs
