[package]
name = "rust-blog"
version = "0.1.0"
authors = ["1uvu <zjh98@vip.qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = "*"
pulldown-cmark = "*"
regex = "*"
lazy_static = "*"
syntect = "*"
chrono = "*"
clap = "*"
ordinal = "*"