[package]
name = "blog"
version = "0.0.1"
authors = ["1uvu <zjh98@vip.qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
env_logger = "0.7.1"
handlebars = "3.2.1"
log = "0.4.8"
pulldown-cmark = "0.7.2"
rocket = "0.4.5"
serde_json = "1.0.56"
